--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 header {
   position: sticky;
   top: 0;
-  background-color: transparent;
+  background-color: white;
   box-shadow: 0px .5px 6px 0 #4F4141;
   z-index: 20;
 }
@@ -103,14 +103,16 @@ header .menu--large .menu__pages {
   align-items: center;
   border-top: 3px solid #D8BCA8;
   border-bottom: 5px solid #D8BCA8;
-  gap: 150px;
 }
 
 header .menu--large .menu__pages ul {
   display: flex;
+  width: 100vw;
   flex-flow: row nowrap;
   justify-content: center;
   padding: 1%;
+  padding-left: 10em;
+  margin-bottom: 0;
 }
 
 header .menu--large .menu__pages li {
@@ -119,7 +121,7 @@ header .menu--large .menu__pages li {
 }
 
 header .menu--large .menu__pages a, header .menu--large .menu__pages .content__logo .registro ul li .compras, header .menu--large .content__logo .registro ul li .menu__pages .compras {
-  font-size: .9rem;
+  font-size: .8rem;
   color: #4F4141;
 }
 
@@ -136,6 +138,7 @@ header .menu--large .menu__pages .menu__pages--active {
 header .menu--large .menu__pages .buscador {
   display: flex;
   flex-direction: row;
+  justify-self: flex-end;
 }
 
 header .menu--large .menu__pages .buscador input {
@@ -283,20 +286,20 @@ footer .copyright p {
   overflow: hidden;
 }
 
-.carousel .hero__img1 {
-  margin-top: -250px;
-}
-
 .carousel #cr2 {
   color: white;
 }
 
+.carousel .hero__img1 {
+  margin-top: -200px;
+}
+
 .carousel .hero__img2 {
-  margin-top: -400px;
+  margin-top: -200px;
 }
 
 .carousel .hero__img3 {
-  margin-top: -500px;
+  margin-top: -300px;
 }
 
 .carousel-caption {
@@ -313,8 +316,7 @@ footer .copyright p {
   flex-direction: row;
   justify-content: space-evenly;
   text-align: center;
-  padding: 2em 0;
-  padding: 0;
+  padding: 2em;
 }
 
 .info .info__container--borderright {
@@ -323,9 +325,9 @@ footer .copyright p {
 }
 
 .info .info__icon {
-  color: white;
-  width: 3em;
-  height: 3em;
+  color: #4F4141;
+  width: 3.4em;
+  height: 3.4em;
   margin-bottom: .5em;
 }
 
@@ -522,14 +524,6 @@ footer .copyright p {
   color: #DCC133;
 }
 
-.products hr {
-  width: 60%;
-  margin: auto;
-  border: 0,1px;
-  border-style: solid;
-  border-color: #77B255;
-}
-
 /* ARMA TU DISEÑO - INDEX */
 .diseno__content {
   display: flex;
@@ -565,12 +559,42 @@ footer .copyright p {
   display: grid;
   margin: 3% 1%;
   grid-template-columns: .5fr .5fr;
-  grid-template-rows: 25% 25%;
+  grid-template-rows: 50% 50%;
+}
+
+.categories .card__category {
+  position: relative;
 }
 
 .categories .card__category img {
   width: 100%;
   height: 100%;
+}
+
+.categories .card__category item-wrap {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  transform: translateY(-50%);
+  color: #fff;
+  opacity: 0;
+}
+
+.categories .card__category h3 {
+  position: absolute;
+  top: 10%;
+  width: 100%;
+  text-align: center;
+  transform: translateY(-50%);
+  text-shadow: 1px 1px 13px #000;
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 0;
+  letter-spacing: .17em;
+  text-transform: uppercase;
 }
 
 .categories img {
@@ -595,14 +619,15 @@ footer .copyright p {
 .subscription {
   display: flex;
   flex-direction: row wrap;
-  background-color: whitesmoke;
+  justify-content: space-evenly;
+  background-color: black;
   text-align: right;
   margin: 2em 0;
   padding: 2em 0;
 }
 
 .subscription .subscription__img {
-  background: url("../../images/suscribe.jpg") no-repeat center/cover;
+  background: url("../images/suscribe.jpg") no-repeat center/cover;
   width: 100%;
   max-width: 40vw;
 }
@@ -613,6 +638,15 @@ footer .copyright p {
   align-items: center;
   gap: 1em;
   margin: 0 2em;
+  color: white;
+}
+
+.subscription .subscription__text h3 {
+  color: lightgray;
+}
+
+.subscription .subscription__text p {
+  color: white;
 }
 
 .subscription .subscription__text p .bold {
@@ -666,79 +700,6 @@ footer .copyright p {
   width: 10em;
 }
 
-.item {
-  border: none;
-  margin-bottom: 30px;
-}
-
-.item .item-wrap {
-  display: block;
-  position: relative;
-  overflow: hidden;
-}
-
-.item .item-wrap:after {
-  z-index: 2;
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
-  visibility: hidden;
-  opacity: 0;
-  transition: .3s all ease-in-out;
-}
-
-.item .item-wrap img {
-  transition: .3s transform ease;
-  transform: scale(1);
-}
-
-.item .item-wrap > .work-info {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  text-align: center;
-  z-index: 3;
-  transform: translateY(-50%);
-  color: #fff;
-  opacity: 0;
-  visibility: hidden;
-  margin-top: 20px;
-  transition: .3s all ease;
-}
-
-.item .item-wrap > .work-info h3 {
-  font-family: 'Raleway', sans-serif;
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 600;
-  margin-bottom: 0;
-  letter-spacing: .17em;
-  text-transform: uppercase;
-}
-
-.item .item-wrap:hover {
-  text-decoration: none;
-}
-
-.item .item-wrap:hover img {
-  transform: scale(1.05);
-}
-
-.item .item-wrap:hover:after {
-  opacity: 1;
-  visibility: visible;
-}
-
-.item .item-wrap:hover .work-info {
-  margin-top: 0px;
-  opacity: 1;
-  visibility: visible;
-}
-
 /* SUBMENU */
 .products__menu--category {
   display: flex;
@@ -748,8 +709,9 @@ footer .copyright p {
   gap: 1em;
   position: relative;
   padding: 0 5%;
-  background-color: white;
+  background-color: black;
   min-height: 40px;
+  margin-bottom: 0;
 }
 
 .products__menu--category .products__menu--item {
@@ -1239,10 +1201,10 @@ footer .copyright p {
 
 .text__discount {
   font-style: italic;
-  text-transform: none;
-  font-size: .8em;
+  font-size: .7em;
   text-align: center;
   padding: .6em 0 .3em 0;
+  text-transform: unset;
 }
 
 /* VER MAS BUTTON */
@@ -1529,6 +1491,14 @@ footer .copyright p {
   border-right: 1px solid black;
 }
 
+.divisor {
+  width: 60%;
+  margin: auto;
+  border: 1px;
+  border-style: solid;
+  border-color: #77B255;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -1640,41 +1610,41 @@ footer .copyright p {
     border-radius: .4em;
     text-transform: uppercase;
   }
-  .cardCategory {
+  .card__category {
     height: 50vh;
   }
-  .mediosDePago {
+  .methods {
     display: flex;
     flex-flow: column;
     justify-content: space-around;
     align-items: center;
     margin: 2em 0 2em 0;
   }
-  .metodos {
+  .methods__content {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
   }
-  .metodos p {
+  .methods__content p {
     margin: 1em 0 1em 0;
   }
-  .metodos img {
+  .methods__content img {
     max-width: 100px;
   }
-  .suscribirIndex {
+  .subscription {
     display: flex;
     flex-direction: row wrap;
     background-color: #DADADA;
     text-align: right;
     margin: 2em 0;
     padding: 2em 0;
-    background: url("../Images/suscribe.jpg") no-repeat center/cover;
+    background: url("../images/suscribe.jpg") no-repeat center/cover;
   }
-  .suscribeImg {
+  .subscription__img {
     display: none;
   }
-  .suscribeForm {
+  .subscription__text {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1682,27 +1652,24 @@ footer .copyright p {
     margin: 0 2em;
     /* max-width:  */
   }
-  .suscribeForm form {
-    display: flex;
-  }
-  .suscribeForm h3 {
+  .subscription__text h3 {
     text-align: center;
     color: white;
     size: 1.5em;
   }
-  .suscribeForm p {
+  .subscription__text p {
     display: none;
   }
-  .suscribeForm span {
+  .subscription__text span {
     color: whitesmoke;
     text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.6);
     font-style: italic;
     font-size: .6em;
   }
-  footer {
-    background-color: #4F4141;
+  .subscription__form {
+    display: flex;
   }
-  .sectionFooter {
+  .footer {
     display: flex;
     align-items: center;
     padding-bottom: 2em;
@@ -1711,7 +1678,7 @@ footer .copyright p {
     color: white;
     text-align: center;
   }
-  .pagosFooter {
+  .footer__payment {
     color: white;
     background-color: black;
     text-align: center;
@@ -1731,7 +1698,7 @@ footer .copyright p {
   .redes a, .redes header .menu--large .content__logo .registro ul li .compras, header .menu--large .content__logo .registro ul li .redes .compras {
     font-size: 2em;
   }
-  .suscripcionFooter {
+  .footer__subscription {
     display: none;
   }
   .info {
